# applied-py-2-telegram-bot

./: Dockerfile  bot.py  config.py  handlers.py  middlewares.py  pyproject.toml  requirements.txt  states.py
applied-py-2-telegram-bot/src/applied_py_2_telegram_bot/: bot.py
applied-py-2-telegram-bot/src/applied_py_2_telegram_bot/routers/: handlers.py
