[tool.poetry]
name = "applied-py-2-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Ilia Ilin <ilyinily@gmail.com>"]
readme = "README.md"
packages = [{include = "applied_py_2_telegram_bot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
